# libuev

./: .codedocs  .gitignore  .travis.yml  API.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  HACKING.md  LICENSE  MOTIVATION.md  Makefile  Makefile.am  README  README.md  TODO.md  autogen.sh  bench.c  configure.ac  cron.c  io.c  joystick.c  libuev.c  libuev.h  libuev.pc.in  libuev.symbols  libuevent.c  libuevent.h  llist.h  luevent.c  main.c  private.h  rules.mk  signal.c  test.c  test.lua  timer.c  uev.c  uev.h
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  coverity.yml  release.yml
.stuff/: .bash_profile  .bashrc  .cshrc  .dircolors  .inputrc  .vimrc  .vimrc.priv  .vimrc.syntax
.stuff/.vim/: pyclewn.vim  scripts.vim
.stuff/.vim/after/syntax/: lua.vim
.stuff/.vim/ftdetect/: mediawiki.vim
.stuff/.vim/ftplugin/: mediawiki.vim
.stuff/.vim/macros/: less.vim  srcmgr.vim
.stuff/.vim/plugin/: increment.vim  increment.vim.orig  jdocConvert.vim  utils.vim
.stuff/.vim/spell/: en.latin1.add  en.latin1.add.spl
.stuff/.vim/syntax/: dbgvar.vim  mediawiki.vim  syncolor.vim
debian/: .gitignore  README.debian  changelog  control  copyright  docs  libuev-dev.install  libuev3.symbols  rules
doc/: .gitignore  Doxyfile  Doxyfile.in  HACKING.md  Makefile.am  TODO.md
examples/: .gitignore  Makefile  Makefile.am  ctrl.c  forky.c  joystick.c  redirect.c  signal.c  test.c
include/libuev/: uev.h
libuevent/: Makefile  libuevent.c  libuevent.h  llist.h  test.c
nmeamux/: Makefile  pak-tasks
nmeamux/root/etc/: mdev.conf
nmeamux/root/etc/cron.daily/: dyndns-update  nmemamux-restart
nmeamux/root/etc/hotplug.d/usbtty/: usbtty.hotplug
nmeamux/root/etc/init.d/: S15modules  S16coldplug  S975nmeamux
src/: API.md  CMakeLists.txt  Makefile.am  README.md  bench.c  cron.c  event.c  io.c  libuev.pc.in  private.h  signal.c  timer.c  uev.c  uev.h
test/: .gitignore  Makefile.am  active.c  check.h  complete.c  cronrun.c  event.c  signal.c
tests/: .gitignore  Makefile.am  active.c  api.c  check.h  complete.c  cronrun.c  event.c  signal.c  timer.c
toolchains/armhf/: armhf_toolchain.cmake
toolchains/mipsel/: mipsel_toolchain.cmake
toolchains/x86/: x86_toolchain.cmake
